syntax = "proto3";

option csharp_namespace = "Shop.PasswordHasher";

package greet;

service PasswordHasher {
  rpc GeneratePasswordHash (PasswordRequest) returns (PasswordHashReply);
  rpc VerifyPassword (PasswordVerificationRequest) returns (PasswordVerificationReply);
}

message PasswordRequest {
  string password = 1;
}

message PasswordHashReply {
  string passwordHash = 1;
}

message PasswordVerificationRequest {
	string password = 1;
	string hashedPassword = 2;
}

message PasswordVerificationReply {
	string isPasswordVerify = 1;
}
